# yt-video-text-md

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
examples/: yt_video_2_text_md.py  yt_video_2_text_md_1.md
tests/: __init__.py  test_main.py
yt_video_text_md/: __init__.py  audio_transcriber.py  main.py  transcript_processor.py
