[metadata]
name = yt-video-text-md
version = 0.1.0
author = Rajesh Kothiya
author_email = rkahir2222@gmail.com
description = Fetch YouTube video transcripts and save them to markdown files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kothiyarajesh/yt-video-text-md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

project_urls =
    Homepage = https://github.com/kothiyarajesh/yt-video-text-md
    Bug Reports = https://github.com/kothiyarajesh/yt-video-text-md/issues
    Source = https://github.com/kothiyarajesh/yt-video-text-md

[options]
packages = find:
python_requires = >=3.10
install_requires =
    yt-dlp
    whisper
    aiofiles
    youtube-transcript-api
    pytube
    tqdm

[options.entry_points]
console_scripts =
    yt-video-text-md = yt_video_text_md.main:main
